--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,23 @@ repository = "https://github.com/buudunn/buudunn"
 license = "GNU General Public License"
 license-file = "LICENSE"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
-web-sys = "0.3.68"
+js-sys = "0.3.68"
 wasm-bindgen = "0.2.91"
-glow = "0.13.1"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'Document',
+  'Element',
+  'HtmlCanvasElement',
+  'WebGlBuffer',
+  'WebGlVertexArrayObject',
+  'WebGl2RenderingContext',
+  'WebGlProgram',
+  'WebGlShader',
+  'Window',
+]
