--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ crate-type = ["cdylib"]
 js-sys = "0.3.68"
 lazy_static = "1.4.0"
 wasm-bindgen = "0.2.91"
+gloo = "0.11.0"
 
 [dependencies.web-sys]
 version = "0.3.4"
