--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
         "webpack": "^5.49.0",
         "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^4.15.1"
+    },
+    "dependencies": {
+        "@fontsource/unifont": "^5.0.7",
+        "@pieced/font-config-webpack-plugin": "^1.0.5"
     }
 }
