--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ js-sys = "0.3.68"
 lazy_static = "1.4.0"
 wasm-bindgen = "0.2.91"
 comma = "1.0.0"
+console_error_panic_hook = "0.1.7"
 
 [dependencies.web-sys]
 version = "0.3.4"
