--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ lazy_static = "1.4.0"
 wasm-bindgen = "0.2.91"
 comma = "1.0.0"
 console_error_panic_hook = "0.1.7"
+once_cell = "1.19.0"
 
 [dependencies.web-sys]
 version = "0.3.4"
