--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
     "scripts": {
-        "build": "webpack",
+        "build": "rollup",
         "serve": "webpack serve"
     },
     "devDependencies": {
+        "@rollup/plugin-wasm": "^6.2.2",
         "@wasm-tool/wasm-pack-plugin": "1.5.0",
-        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.3.2",
         "text-encoding": "^0.7.0",
         "webpack": "^5.49.0",
         "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^4.15.1"
-    },
-    "dependencies": {
-        "@fontsource/unifont": "^5.0.7",
-        "@pieced/font-config-webpack-plugin": "^1.0.5"
     }
 }
