--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
     "scripts": {
-        "build": "rollup",
+        "build": "rollup -c",
         "serve": "webpack serve"
     },
     "type": "module",
     "devDependencies": {
         "@rollup/plugin-wasm": "^6.2.2",
+        "@wasm-tool/rollup-plugin-rust": "^2.4.5",
         "@wasm-tool/wasm-pack-plugin": "1.5.0",
         "html-webpack-plugin": "^5.3.2",
         "text-encoding": "^0.7.0",
         "webpack": "^5.49.0",
-        "webpack-cli": "^4.7.2",
+        "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.15.1"
+    },
+    "dependencies": {
+        "rollup": "^4.12.0"
     }
 }
