--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,22 @@ js-sys = "0.3.68"
 lazy_static = "1.4.0"
 wasm-bindgen = "0.2.91"
 comma = "1.0.0"
+wasmi = "0.31.2"
 console_error_panic_hook = "0.1.7"
 once_cell = "1.19.0"
 libm = "0.2.8"
+wasm-bindgen-futures = "0.4.42"
 eval = "0.4.3"
+url = "2.5.0"
 
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
+  'Headers',
+  'Request',
+  'RequestInit',
+  'RequestMode',
+  'Response',
   'Document',
   'Element',
   'HtmlCanvasElement',
