--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ libm = "0.2.8"
 wasm-bindgen-futures = "0.4.42"
 eval = "0.4.3"
 url = "2.5.0"
+meval = "0.2.0"
 
 [dependencies.web-sys]
 version = "0.3.4"
