--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ wasm-bindgen-futures = "0.4.42"
 eval = "0.4.3"
 url = "2.5.0"
 meval = "0.2.0"
-good_lp = { version = "1.7.0", features = ["minilp"], default-features = false }
+reqwest = { version = "0.11", features = ["rustls"] }
 
 [dependencies.web-sys]
 version = "0.3.4"
