--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ eval = "0.4.3"
 url = "2.5.0"
 meval = "0.2.0"
 reqwest = { version = "0.11", features = ["rustls"] }
+dyn-clone = "1.0.17"
 
 [dependencies.web-sys]
 version = "0.3.4"
